[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Fredericka_the_Great/FrederickatheGreat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Overpass/Overpass-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Overpass/Overpass-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/grass.png" type="Texture" id=5]
[ext_resource path="res://assets/bird-yellow-fat.png" type="Texture" id=6]
[ext_resource path="res://assets/bird-brown-fat.png" type="Texture" id=9]
[ext_resource path="res://assets/bird-blue-fat.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 75
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
margin_right = 600.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -32.0
margin_right = 73.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 164.0
margin_bottom = 98.0

[node name="FullscreenToggle" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_top = 10.0
margin_right = 164.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -232.0
margin_right = 233.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 3 )
text = "Hangry Birds"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grass" type="Sprite" parent="Control2"]
position = Vector2( 300.517, 300.019 )
z_index = -5
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.5
margin_top = 174.966
margin_right = 154.5
margin_bottom = 221.966
custom_fonts/font = SubResource( 4 )
text = "Protect your lunch by throwing food to the birds!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bird-brown-fat" type="Sprite" parent="."]
position = Vector2( 103.748, 403.304 )
rotation = 0.349066
texture = ExtResource( 9 )

[node name="bird-yellow-fat" type="Sprite" parent="."]
position = Vector2( 506.446, 443.819 )
rotation = -1.16937
texture = ExtResource( 6 )

[node name="bird-blue-fat" type="Sprite" parent="."]
position = Vector2( 457.336, 226.51 )
rotation = 3.49066
texture = ExtResource( 10 )
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/FullscreenToggle" to="." method="_on_FullscreenToggle_toggled"]
